[metadata]
# replace with your username:
name = capstone_text_mining_package
version = 0.0.1
author = Matt Fligiel, Carmin Ballou, Zain Jafri
author_email = matthewfligiel@gmail.com
description = A small package of functions made to simplify modeling and text mining as a part of our capstone project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mfligiel/Capstone_Text_Mining
project_urls =
    Bug Tracker = https://github.com/mfligiel/Capstone_Text_Mining/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
